[pom] Support builds jdk 17+